standard.css
/* ... */
.brief > li > p, .brief > li > ol, .brief > li > ul, .brief > li > dl {
  margin-top: 0;
  margin-bottom: 0;
  padding-top: 0;
  padding-bottom: 0;
}

.category-list { margin-top: -0.75em; margin-bottom: 1em; line-height: 1.5; }
.category-list::before { content: '\21D2\A0'; font-size: 1.2em; font-weight: 900; }
.category-list li { display: inline; }
.category-list li:not(:last-child)::after { content: ', '; }
.category-list li > span, .category-list li > a { text-transform: lowercase; }
.category-list li * { text-transform: none; } /* don't affect <code> nested in <a> */

.big-issue, .XXX { color: #E50000; background: white; border: solid red; padding: 0.5em; margin: 1em 0; }
.big-issue > :first-child, .XXX > :first-child { margin-top: 0; }
p .big-issue, p .XXX { line-height: 3em; }

.tablenote { margin: 0.25em 0; }
.tablenote small { font-size: 0.9em; }

.bookkeeping:before { display: block; content: 'Bookkeeping details'; font-weight: bolder; font-style: italic; }
.bookkeeping { font-size: 0.8em; margin: 2em 0; }
.bookkeeping p { margin: 0.5em 2em; display: list-item; list-style: square; }
.bookkeeping dt { margin: 0.5em 2em 0; }
.bookkeeping dd { margin: 0 3em 0.5em; }

.critical { margin: 1em; border: double thick red; padding: 1em; background: #FFFFCC; }
.critical > :first-child { margin-top: 0; }

h4 { position: relative; z-index: 3; }
h4 + .element, h4 + div.status + .element { margin-top: -2.75em; padding-top: 1.5em; }
.element { background: #EEFFEE; color: black; margin: 0 0 1em -0.15em; padding: 0 1em 0.25em 1em; }
.element:not(:hover) > dt > :link, .element:not(:hover) > dt > :visited { color: inherit; text-decoration: none; }

table.css-property caption { text-align: left; font: inherit; font-weight: bolder; }
table.css-property th { font: inherit; font-style: italic; text-align: left; padding-left: 2em; }

td.non-rectangular-cell-continuation { border-left-style: hidden; }
td.non-rectangular-cell-indentation { border-top-style: hidden; min-width: 2em; }

.hide { display: none }

.head { margin: 0 0 1em; padding: 1em 0 0 0; display: block; }
.head p { margin: 0; }
.head h1 { margin: 0; }
.head h2 { margin-top: 0; }
.head .logo img { position: absolute; top: 1em; right: 1em; border: none } /* remove border from top image */
@media (max-width: 767px) {
  .head .logo img { width: 4em; height: 4em; }
}
.head dl { margin: 1em 0; }
p.copyright { font-size: 0.6em; font-style: oblique; margin: 0; }

nav { margin: 5em 0 0 0; }
header + nav { margin: 1em 0; }

#head nav {
  text-align: center;
  margin: auto;
}
#head nav > div {
  display: inline-block;
}
#head nav > div > a {
  display: inline-block;
  white-space: nowrap;
  font: 1em/1 Helvetica Neue, sans-serif, Droid Sans Fallback;
  text-decoration: none;
  width: auto;
  margin: 0.5em;
  color: #F3F3F3;
  text-align: center;
}
#head nav > div > a { box-shadow: 0 0 2px #3C790A; background: #3C790A; }
#head nav > div > a.comms { box-shadow: 0 0 2px #165FCC; background: #165FCC; } /* #165FCC #43679D #0B2F66 */
#head nav > div > a.feedback { box-shadow: 0 0 2px #FF3E3A; background: #FF3E3A; } /* #FF3E3A #CD6B6A #990300 */
#head nav > div > a.changes { box-shadow: 0 0 2px #54B29A; background: #54B29A; } /* #54B29A #6A9A8E #28584C */
#head nav > div > a.misc { box-shadow: 0 0 2px #FFA32D; background: #FFA32D; } /* #FFA32D #CB9D62 #945400 */
#head nav > div > a > * > * {
  display: block;
  padding: 0.1em 1em 0.1em;
  background: rgba(255,255,255,0.9);
  color: black;
  font: inherit;
  overflow: hidden;
  text-overflow: ellipsis;
}
#head nav > div > a > * > *:first-child {
  padding-top: 0.5em;
}
#head nav > div > a > * > *:last-child {
  padding-bottom: 1em;
}
#head nav > div > a > * > strong {
  color: blue;
  text-decoration: underline;
  padding-bottom: 0.5em;
}
#head nav > div > a > * > code {
  font-size: 0.8em;
}
@media (max-width: 767px) {
  #head nav { text-align: left; }
  #head nav > div { display: inline; }
  #head nav > div > a { width: 48%; margin: 0.1em; }
  #head nav > div > a > * > * { padding: 0.1em 0.5em 0.5em; }
  #head nav > div > a > * > code { font-size: 0.7em; }
}

p.copyright { text-align: center; }
p.copyright > span { display: inline-block; border: none; }

body.dfnEnabled dfn { cursor: pointer; }
.dfnPanel {
  display: inline;
  position: absolute;
  z-index: 35;
  height: auto;
  width: auto;
  padding: 0.5em 0.75em;
  font: small Helvetica Neue, sans-serif, Droid Sans Fallback;
  background: #DDDDDD;
  color: black;
  border: outset 0.2em;
}
.dfnPanel * { margin: 0; padding: 0; font: inherit; text-indent: 0; }
.dfnPanel :link, .dfnPanel :visited { color: black; }
.dfnPanel p:not(.spec-link) { font-weight: bolder; }
.dfnPanel * + p { margin-top: 0.25em; }
.dfnPanel li { list-style-position: inside; }

@media aural {
  h1, h2, h3 { stress: 20; richness: 90 }
  .hide { speak: none }
  p.copyright { volume: x-soft; speech-rate: x-fast }
  dt { pause-before: 20% }
  code, pre { speak-punctuation: code }
}

@media print {
  html { font-size: 8pt; }
  @page { margin: 1cm 1cm 1cm 1cm; }
  @page :left {
    @bottom-left {
      font: 6pt Helvetica Neue, sans-serif, Droid Sans Fallback;
      content: counter(page);
      padding-top: 0em;
      vertical-align: top;
    }
  }
  @page :right {
    @bottom-right {
      font: 6pt Helvetica Neue, sans-serif, Droid Sans Fallback;
      content: counter(page);
      text-align: right;
      vertical-align: top;
      padding-top: 0em;
    }
  }
  a[href^="#"]::after { font-size: 0.6em; vertical-align: super; padding: 0 0.15em 0 0.15em; content: "p" target-counter(attr(href), page); }
  .toc a::after { font: inherit; vertical-align: baseline; padding: 0; content: leader('.') target-counter(attr(href), page); }
  pre a[href^="#"]::after, blockquote a[href^="#"]::after { content: ""; padding: 0; }
  table { font-size: smaller; }
}

ul.domTree, ul.domTree ul { padding: 0 0 0 1em; margin: 0; }
ul.domTree li { padding: 0; margin: 0; list-style: none; position: relative; }
/* ... */

